Add rudimentary header/footer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
   </head>
   <body>
+    <header><div class="title">Solana Floor Tracker</div></header>
     <div>
       <table id="floorResults">
         <tr>
@@ -27,6 +28,15 @@
         </tr>
       </table>
     </div>
+    <footer>
+      <div class="donation">
+        Buy me a coffee!
+        <br />
+        Solana Wallet:
+        <br />
+        BC9JedrRyccVVkuM36AoGA3hLbZKyNqRYPLrhrf4ShAw
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
