--- a/index.html
+++ b/index.html
@@ -5,21 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Floor Price Tracker</title>
-    <style>
-      table,
-      tr,
-      th,
-      td {
-        border: 2px solid black;
-      }
-      table {
-        border-collapse: collapse;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><div class="title">Solana Floor Tracker</div></header>
-    <div>
+    <header>
+      <div class="title"><a href="/"> Solana Floor Tracker </a></div>
+    </header>
+    <div class="container">
+      <h3 class="table_title">Raising Floor Prices:</h3>
+    </div>
+    <div class="container">
       <table id="floorResults">
         <tr>
           <th>Collection Name</th>
